--- a/app.json
+++ b/app.json
@@ -1,13 +1,23 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/user/user"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "subpackages": [
+    {
+      "root": "modules/Food",
+      "name": "food",
+      "pages": [
+        "pages/index/index"
+      ],
+      "independent": true
+    }
+  ],
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
   "tabBar": {
     "list": [
