feat: 增加首页美容美发模块及增加休闲娱乐分类

--- a/app.json
+++ b/app.json
@@ -59,6 +59,14 @@
         "pages/index/index"
       ],
       "independent": true
+    },
+    {
+      "root": "modules/Beauty",
+      "name": "beauty",
+      "pages": [
+        "pages/index/index"
+      ],
+      "independent": true
     }
   ],
   "window": {
