--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,8 @@
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
-		"nodeModules": true
+		"nodeModules": true,
+		"autoAudits": true
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.2",
