--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/user/user"
+    "pages/user/user",
+    "modules/Detail/detail"
   ],
   "subpackages": [
     {
@@ -24,7 +25,8 @@
       "root": "modules/Health",
       "name": "health",
       "pages": [
-        "pages/index/index"
+        "pages/index/index",
+        "pages/detail/detail"
       ],
       "independent": true
     },
@@ -32,7 +34,8 @@
       "root": "modules/Rest",
       "name": "rest",
       "pages": [
-        "pages/index/index"
+        "pages/index/index",
+        "pages/detail/detail"
       ],
       "independent": true
     },
@@ -40,7 +43,8 @@
       "root": "modules/Beauty",
       "name": "beauty",
       "pages": [
-        "pages/index/index"
+        "pages/index/index",
+        "pages/detail/detail"
       ],
       "independent": true
     },
@@ -48,7 +52,8 @@
       "root": "modules/Gift",
       "name": "gift",
       "pages": [
-        "pages/index/index"
+        "pages/index/index",
+        "pages/detail/detail"
       ],
       "independent": true
     },
@@ -56,8 +61,15 @@
       "root": "modules/Hotel",
       "name": "hotel",
       "pages": [
-        "pages/index/index"
+        "pages/index/index",
+        "pages/detail/detail"
       ],
+      "independent": true
+    },
+    {
+      "root": "modules/Feedback",
+      "name": "feedback",
+      "pages": ["pages/index/index"],
       "independent": true
     }
   ],
